
* integrated `Output.*' and `verbose.*' to Petri (`see
  https://gna.org/task/?6837')

* reimplemented open net normalization function `normalize()') according to
  [LohmannMW_2007_icatpn]

* implemented PNML import and export based on the code of
  `http://www.w3.org/XML/9707/XML-in-C'

* added a utility that adds a configuration interface to a labeled Petri net

Version 3.00 (2009-11-03)
=========================

* final condition can now be converted in disjunctive normal form

* added type getter to formula classes

* started proper versioning

* started proper documentation

* formulae now only concern internal places; only left wildcard is
  `ALL_OTHER_PLACES_EMPTY'

* fixed bug #14648: PNAPI: Shift/reduce conflict in `parser-pn.cc'

Version 2.00
============

* removed memory leaks

* integrated Output class from Wendy

* added make target "win32" to compile the api without linking against the
  cygwin1.dll

* added manpage for petri tool

* API can be compiled with foreign config.h (removed macro dependencies)

* added scripts to use LCOV
  (`http://ltp.sourceforge.net/coverage/lcov.php') to determine test case
  coverage (use `make cover' in `tests' directory)

* new features:
     * Transition costs (https://gna.org/task/index.php?6615)

     * test cases and integration of new owfn parser
       (https://gna.org/task/index.php?6658)

     * Function to add a prefix to all places and transitions
       (https://gna.org/task/index.php?6749)

     * Integrate Genet for SA2ON conversion
       (https://gna.org/task/index.php?6767)

* fixed bugs:
     * PetriNet does not know Synchronous Labels of its transitions
       (https://gna.org/bugs/index.php?13936)

     * sa2sm/sa2owfn ignore synchronous labels
       (https://gna.org/bugs/index.php?13968)

     * Net reduction invalidates finalCondition and leads to core dump
       (https://gna.org/bugs/index.php?13969)

     * Composition of more than two nets fails because of prefixes to I/O