@@ -29,6 +29,7 @@
 #include "myio.h"
 #include "condition.h"
 #include "component.h"
+#include "interface.h"
 
 #ifndef CONFIG_PETRIFY
 #define CONFIG_PETRIFY "not found"
@@ -311,7 +312,8 @@ public:
   /*!
    * \name   Basic Structural Changes
    *
-   * Functions to add nodes (Node, Place, Transition) and arcs (Arc).
+   * Functions to add nodes (Node, Place, Transition), arcs (Arc)
+   * and interface, i.e. ports (Port) and labels (Label).
    */
   //@{
 
@@ -327,6 +329,26 @@ public:
   Transition & createTransition(const std::string & = "",
       const std::set<std::string> & = std::set<std::string>());
 
+  /// creates a Port
+  Port & createPort(const std::string &);
+
+  /// creates an input Label
+  Label & createInputLabel(const std::string &, const std::string &);
+
+  /// creates an input Label
+  Label & createInputLabel(const std::string &, Port * = NULL);
+
+  /// creates an output Label
+  Label & createOutputLabel(const std::string &, const std::string &);
+
+  /// creates an output Label
+  Label & createOutputLabel(const std::string &, Port * = NULL);
+
+  /// creates a synchronous Label
+  Label & createSynchronizeLabel(const std::string &, const std::string &);
+
+  /// creates a synchronous Label
+  Label & createSynchronizeLabel(const std::string &, Port * = NULL);
 
   //@}
 
@@ -464,6 +486,9 @@ private:
 
   /// all synchronous labels
   std::set<std::string> labels_;
+
+  /// complete interface
+  Interface interface_;
 
   /* general properties */
 
